tests/baselines/reference/generatorTypeCheck53.errors.txt
generatorTypeCheck53.ts(1,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
generatorTypeCheck53.ts(2,13): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.


==== generatorTypeCheck53.ts (2 errors) ====
    class Foo { x: number }
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    class Baz { z: number }
                ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    function* g() {
        yield new Foo;
        yield* [new Baz];
    }